feat: Add uids for story and project and fix controllers
