# main.go
@@ -49,7 +49,8 @@ func serveApplication() {
 	privateRoutes.Use(middleware.Authentication)
 	privateRoutes.GET("/story", pCtrl.GetStories)
 	privateRoutes.GET("/story/:storyId", pCtrl.GetStoryById)
-	privateRoutes.POST("/story", pCtrl.GenerateScrumStories)
+	privateRoutes.POST("/story", pCtrl.CreateStory)
+	privateRoutes.POST("/story/generate", pCtrl.GenerateScrumStories)
 	privateRoutes.GET("/project", pCtrl.GetProjects)
 	privateRoutes.GET("/project/:storyId", pCtrl.GetProjects)
 	privateRoutes.POST("/project", pCtrl.CreateProject)
